--- a/web/src/components/LandingHeader/styles.css
+++ b/web/src/components/LandingHeader/styles.css
@@ -1,47 +1,48 @@
-.page-header{
-    display: flex;
-    flex-direction: column;
-    background-color: var(--color-primary);
+.landing-header{
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-primary-lighter);
 }
 
-.page-header .top-bar-container{
+.landing-header .top-bar-container{
     width: 90%;
+    height: 10%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: var(--color-text-in-primary);
-    padding: 1.6rem 0;
+    color: var(--color-text-in-secondary);
+    padding: 0.2rem 0;
 }
 
-.page-header .top-bar-container a{
+.landing-header .top-bar-container a{
     height: 3.2rem;
     transition: opacity 0.2s;
 }
 
-.page-header .top-bar-container a:hover{
+.landing-header .top-bar-container a:hover{
     opacity: 0.6;
 }
 
-.page-header .top-bar-container > img{
+.landing-header .top-bar-container > img{
     height: 1.6rem;    
 }
 
-.page-header .header-content{
+.landing-header .header-content{
     width: 90%;
     margin: 0 auto;
     position: relative;
     margin: 3.2rem auto;
 }
 
-.page-header .header-content strong{
+.landing-header .header-content strong{
     font: 700 3.6rem Archivo;
-    line-height: 4.2rem;    
+    line-height: 4.2rem;
     color: var(--color-title-in-primary);
 }
 
-.page-header .header-content p{
-    max-width: 500rem;
+.landing-header .header-content p{
+    max-width: 30rem;
     font-size: 1.6rem;
     line-height: 3.6rem;
     color: var(--color-text-in-primary);
@@ -49,15 +50,15 @@
 }
 
 @media (min-width: 700px){
-    .page-header{
+    .landing-header{
         height: 340px;
     }
 
-    .page-header .top-bar-container{
+    .landing-header .top-bar-container{
         max-width: 1100px;
     }
 
-    .page-header .header-content{
+    .landing-header .header-content{
         flex: 1;
         max-width: 740px;
         margin: 0 auto;
@@ -68,7 +69,7 @@
         align-items: flex-start;
     }
 
-    .page-header .header-content strong{
-        max-width: 1000px;
+    .landing-header .header-content strong{
+        max-width: 350px;
     }
 }
