--- a/web/src/pages/Landing/styles.css
+++ b/web/src/pages/Landing/styles.css
@@ -92,6 +92,19 @@
     margin-left: 0.8rem;
 }
 
+.buttons-container a.about-us{
+    margin-top: 2.5rem;
+    margin-left: 3rem;
+    background: var(--color-primary-lighter);
+    width: 5rem;
+    height: 5rem;
+    border-radius: 5rem; 
+}
+
+.buttons-container a.about-us:hover{
+    background: var(--color-primary-light);
+}
+
 @media (min-width: 1100px){
     #page-landing-content{
         max-width: 1100px;
@@ -140,15 +153,5 @@
         justify-self: end;
     }
 
-    .buttons-container a.about-us{
-        margin-left: 1rem;
-        background: var(--color-primary-lighter);
-        width: 5rem;
-        height: 5rem;
-        border-radius: 5rem; 
-    }
-    
-    .buttons-container a.about-us:hover{
-        background: var(--color-primary-light);
-    }
+
 }
